style: auth register and fix nav tripsadapter

--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/action_home_to_listTrip"
             app:destination="@id/nav_listTrip" />
+        <action
+            android:id="@+id/action_listTrip_to_detailTrip"
+            app:destination="@id/nav_detailTrip" />
     </fragment>
 
     <fragment
