--- a/app/src/main/res/layout/fragment_auth_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_auth_onboarding_1.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/logo"
         android:layout_width="90dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
