--- a/app/src/main/res/layout/fragment_auth_onboarding_2.xml
+++ b/app/src/main/res/layout/fragment_auth_onboarding_2.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
