--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -55,6 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
+                android:layout_marginBottom="-8dp"
                 android:text="Trip Name"
                 android:textSize="16sp" />
 
@@ -76,6 +77,7 @@
                     android:id="@+id/textViewMountainName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
                     android:layout_marginStart="4dp"
                     android:text="Mountain Name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
@@ -88,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:layout_marginTop="6dp">
+                android:layout_marginTop="2dp">
 
                 <TextView
                     android:id="@+id/textViewPrice"
@@ -115,6 +117,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
+                        android:textColor="@color/green_primary"
                         android:text="99"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                 </LinearLayout>
