--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.entsh104.highking.ui.cust.beranda.BerandaFragment"
-        android:label="Home"
+        android:label="Welcome Back!"
         tools:layout="@layout/fragment_cust_beranda">
         <action
             android:id="@+id/action_home_to_listTrip"
@@ -41,6 +41,9 @@
         <argument
             android:name="trip"
             app:argType="com.entsh104.highking.ui.model.Trip" />
+        <action
+            android:id="@+id/action_nav_detailTrip_to_cartFragment"
+            app:destination="@id/nav_cart" />
     </fragment>
 
     <fragment
@@ -82,5 +85,11 @@
         <action
             android:id="@+id/action_nav_detailMountain_to_nav_listTrip"
             app:destination="@id/nav_listTrip" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_cart"
+        android:name="com.entsh104.highking.ui.cust.cart.CartFragment"
+        android:label="Checkout"
+        tools:layout="@layout/fragment_cust_cart">
     </fragment>
 </navigation>
