--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,6 +12,11 @@
         android:title="@string/chat" />
 
     <item
+        android:id="@+id/nav_search"
+        android:icon="@drawable/ic_search"
+        android:title="@string/pencarian" />
+
+    <item
         android:id="@+id/nav_orders"
         android:icon="@drawable/ic_ticket"
         android:title="@string/orders" />
