--- a/app/src/main/res/layout/fragment_cust_filter.xml
+++ b/app/src/main/res/layout/fragment_cust_filter.xml
@@ -1,40 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="30dp"
     tools:context=".ui.cust.filter.FilterFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
-    <Button
-        android:id="@+id/btn_lokasi"
-        android:layout_width="match_parent"
+    <!-- Location AutoCompleteTextView -->
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteLocation"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:drawableStart="@drawable/ic_location_24_black"
-        android:shadowColor="@color/black"
-        android:text="@string/lokasi" />
-    <Button
-        android:id="@+id/btn_tanggal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:drawableStart="@drawable/ic_calendar_24_black"
-        android:shadowColor="@color/black"
-        android:text="@string/lokasi" />
+        android:hint="Location"
+        android:drawableStart="@drawable/ic_place_outline"
+        android:drawablePadding="8dp"
+        android:background="@drawable/custom_bg_white_rounded"
+        android:drawableTint="@android:color/darker_gray"
+        android:padding="12dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
+        android:layout_marginHorizontal="18dp" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
+    <!-- Date Picker -->
+    <TextView
+        android:id="@+id/textViewDate"
+        android:layout_width="0dp"
+        android:textSize="16sp"
         android:layout_height="wrap_content"
+        android:hint="Tanggal Berangkat"
+        android:drawablePadding="8dp"
+        android:background="@drawable/custom_bg_white_rounded"
+        android:padding="12dp"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toBottomOf="@id/autoCompleteLocation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="18dp"
+        app:drawableTint="@android:color/darker_gray"
+        app:drawableStartCompat="@drawable/ic_calendar" />
+
+    <!-- Search Button -->
+    <Button
+        android:id="@+id/btn_search_trip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Cari Trip"
         android:background="@drawable/iv_rounded_button"
-        android:text="@string/cari_trip"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
-</LinearLayout>
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:padding="12dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="18dp" />
+</androidx.constraintlayout.widget.ConstraintLayout>
