--- a/app/src/main/res/navigation/nav_graph_cust.xml
+++ b/app/src/main/res/navigation/nav_graph_cust.xml
@@ -104,4 +104,13 @@
             android:id="@+id/action_nav_confirmation_accepted_to_nav_orders"
             app:destination="@id/nav_orders" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_search"
+        android:name="com.entsh104.highking.ui.cust.filter.FilterFragment"
+        android:label="Pencarian"
+        tools:layout="@layout/fragment_cust_filter" >
+        <action
+            android:id="@+id/action_nav_search_to_nav_listTrip"
+            app:destination="@id/nav_listTrip" />
+    </fragment>
 </navigation>
