--- a/app/src/main/res/layout/fragment_cust_list_trip.xml
+++ b/app/src/main/res/layout/fragment_cust_list_trip.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="6dp"
     tools:context=".ui.cust.trip.ListTripFragment">
 
     <androidx.recyclerview.widget.RecyclerView
