--- a/app/src/main/res/drawable/custom_bg_receiver_message.xml
+++ b/app/src/main/res/drawable/custom_bg_receiver_message.xml
@@ -5,6 +5,6 @@
         android:topRightRadius="8dp"
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="8dp"/>
-    <stroke android:width="1dp" android:color="@android:color/darker_gray"/>
+    <stroke android:width="1dp" android:color="@color/dark_grey"/>
     <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
 </shape>
