--- a/app/src/main/res/layout/item_chat_sender.xml
+++ b/app/src/main/res/layout/item_chat_sender.xml
@@ -13,6 +13,7 @@
         android:textSize="14sp"
         android:paddingHorizontal="12dp"
         android:background="@drawable/custom_bg_sender_message"
+        android:gravity="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
