--- a/app/src/main/res/navigation/nav_graph_auth.xml
+++ b/app/src/main/res/navigation/nav_graph_auth.xml
@@ -38,7 +38,11 @@
         android:id="@+id/loginFragment"
         android:name="com.entsh104.highking.ui.auth.login.LoginFragment"
         android:label="fragment_auth_login"
-        tools:layout="@layout/fragment_auth_login" />
+        tools:layout="@layout/fragment_auth_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.entsh104.highking.ui.auth.register.RegisterFragment"
@@ -47,6 +51,9 @@
         <action
             android:id="@+id/action_registerFragment_to_verificationFragment"
             app:destination="@id/verificationFragment" />
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/verificationFragment"
