--- a/app/src/main/res/layout/item_chat_message.xml
+++ b/app/src/main/res/layout/item_chat_message.xml
@@ -6,14 +6,20 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/textViewMessage"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/custom_bg_message"
-        android:padding="12dp"
-        android:text="Sample message"
-        android:textColor="@android:color/white"/>
+        android:padding="12dp">
+
+        <TextView
+            android:id="@+id/textViewMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sample message"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textViewTimestamp"
@@ -22,5 +28,5 @@
         android:text="15:20 PM"
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="4dp" />
 </LinearLayout>
