--- a/app/src/main/res/layout/fragment_cust_detail_mountain.xml
+++ b/app/src/main/res/layout/fragment_cust_detail_mountain.xml
@@ -332,18 +332,21 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/iv_twitter"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:src="@drawable/ic_twitter"
                     android:layout_marginEnd="8dp" />
 
                 <ImageView
+                    android:id="@+id/iv_facebook"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:src="@drawable/ic_facebook"
                     android:layout_marginEnd="8dp" />
 
                 <ImageView
+                    android:id="@+id/iv_instagram"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:src="@drawable/ic_instagram" />
